--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = [
 ]
 dependencies = []
 requires-python = ">=3.10"
-readme = "README.md"
+package-mode = false
 license = {text = "MIT"}
 
 
